# Image_Detection_Project

./: CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  document.txt
include/: layer1_capture.h  layer2_detection.h  layer3_liveness.h  layer4_alignment.h  layer4_hybrid.h  layer5_displayframe.h  layer5_packaging.h
src/: layer1_capture.cpp  layer2_detection.cpp  layer3_liveness.cpp  layer4_alignment.cpp  layer4_hybrid.cpp  layer5_packaging.cpp  layer5_visualization.cpp  main.cpp
